// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListArticles correctly handles empty lists without errors 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [],
      "pageInfo": Object {
        "firstCursor": null,
        "lastCursor": null,
      },
      "totalCount": 0,
    },
  },
}
`;

exports[`ListArticles filters by moreLikeThis 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0QXJ0aWNsZVRlc3QzIl0=",
        "lastCursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles filters by replyCount 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
        "lastCursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`ListArticles filters by replyRequestCount 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`ListArticles filters by userId, appId and fromUserOfArticleId 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles filters by userId, appId and fromUserOfArticleId 2`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles lists all articles 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "cursor": "WyJsaXN0QXJ0aWNsZVRlc3QzIl0=",
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "cursor": "WyJsaXN0QXJ0aWNsZVRlc3QyIl0=",
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "cursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0QXJ0aWNsZVRlc3QzIl0=",
        "lastCursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`ListArticles sorts 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WzMsImxpc3RBcnRpY2xlVGVzdDMiXQ==",
        "lastCursor": "WzEsImxpc3RBcnRpY2xlVGVzdDEiXQ==",
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`ListArticles sorts 2`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WzIsImxpc3RBcnRpY2xlVGVzdDEiXQ==",
        "lastCursor": "WzAsImxpc3RBcnRpY2xlVGVzdDMiXQ==",
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`ListArticles supports after 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0QXJ0aWNsZVRlc3QzIl0=",
        "lastCursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`ListArticles supports before 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0QXJ0aWNsZVRlc3QzIl0=",
        "lastCursor": "WyJsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`ListArticles throws error when author filter is not set correctly 1`] = `
Array [
  [GraphQLError: Both appId and userId must be specified at once],
]
`;

exports[`ListArticles throws error when author filter is not set correctly 2`] = `
Array [
  [GraphQLError: fromUserOfArticleId does not match any existing articles],
]
`;
